--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ var/
 .installed.cfg
 *.egg
 Pyfa.egg-info/
+eve.db
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
